numbers -- fix a non-fatal problem with hardlinks when a filesystem is
moved to another device (and the inodes don't change).

bug#13475: correct an UpdateError when backing up hardlinks with EAs
and/or ACLs.

debian bug#306798: SELinux security attributes can not be removed and
rdiff-backup should not fail when it fails to remove them from temp
files.  fix from Konrad Podloucky.


New in v0.13.6 (2005/04/07)
---------------------------

Fixed timezone bug.  Hopefully this is the last one.  (Thanks to
Randall Nortman for bug report.)

Added fix for listing/restoring certain bad archives made when there
was a timezone bug.  (Thanks to Stephen Isard)

************** Serious bug fix ******************
If a directory in the source directory was replaced by certain
symlinks, then if later backups failed they could cause files in the
directory that the symlink pointed to to be deleted!  Much thanks to
Alistair Popple for pointing this bug out and providing a test case.


New in v0.13.5 (2005/03/28)
---------------------------

Added error-correcting fsync suggestion by Antoine Perdaens.
rdiff-backup may work better with NFS now.

Fix by Dean Gaudet for --calculate-average mode (it broke somewhere in
0.13.x).

Fix for regress warning code:  rdiff-backup should warn you if you are
trying to back up a directory into itself.

Fix for restoring certain directories when not run as root.

Now when determining group permissions check supplementary groups as
well as main group.  (Bug report by Ryan Castle.)

Fixed bug which could cause crash when backing up 3 or more hard
linked files and the first gets deleted during processing.  (Thanks to
Dean Gaudet for bug report.)

Fixed user/group restoring error noticed by Fran Firman.

Checked in Robert Shaw's --chars-to-quote patch

Treated hard link permission problem on Mac OS X by applying
suggestion by David Vasilevsky

Dean Gaudet's patch fixes "--restrict /" option.

Added Robert Shaw's --exclude-fifo, --include-symbolic-links,